clusters/xs4/kube/media/navidrome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: navidrome
spec:
 replicas: 1
 selector:
   matchLabels:
     app: navidrome
 template:
   metadata:
     labels:
       app: navidrome
   spec:
     containers:
       - name: navidrome
         image: docker.io/deluan/navidrome@sha256:d864c5ddbae508920b157d73b08bd48e93ec8c422003a491edd01a889497582a
         imagePullPolicy: Always
         resources:
           limits:
             cpu: ".5"
             memory: "2Gi"
           requests:
             cpu: "0.1"
             memory: "10M"
         ports:
           - containerPort: 4533
         volumeMounts:
           - name: navidrome-data
             mountPath: /data
           - name: navidrome-music
             mountPath: /music
             readOnly: true
         livenessProbe:
            httpGet:
              path: /navidrome/app
              port: 4533
            initialDelaySeconds: 30
            periodSeconds: 3
            timeoutSeconds: 90
     volumes:
      - name: navidrome-data
        persistentVolumeClaim:
          claimName: navidrome-data
      - name: navidrome-music
        persistentVolumeClaim:
          claimName: nfs-navidrome-music
