clusters/xs4/kube/media/navidrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
spec:
  selector:
    app: navidrome
  ports:
    - name: navidrome
      protocol: TCP
      port: 80
      targetPort: 4533
